trailer no longer overlaps title

--- a/cinemaebooking/src/components/HomePageViews/MainFeatured.css
+++ b/cinemaebooking/src/components/HomePageViews/MainFeatured.css
@@ -29,9 +29,9 @@
     align-items: center;
 }
 
-.MainFeaturedCarouselItem iframe{
-    width: 70vw;
-    height: 40vw;
+.MainFeaturedCarouselItem iframe {
+    width: 100%;
+    height: 100%;
     border: none;
 }
 
